fix: apple logo is invisible in dark theme

--- a/src/dotnet/UI.Blazor/Components/SignIn/Modal/sign-in-modal.css
+++ b/src/dotnet/UI.Blazor/Components/SignIn/Modal/sign-in-modal.css
@@ -36,6 +36,10 @@
     @apply text-02;
 }
 
+.theme-dark .sign-in-with .logo-apple {
+    filter: invert(100%);
+}
+
 /* Sign-in step */
 
 .sign-in-step {
